<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/searchSocio"
        android:title="@string/searchSocio"
        android:icon="@drawable/ic_search_white_24dp"
        myapp:showAsAction="always"
        myapp:actionViewClass="android.support.v7.widget.SearchView"
        android:actionViewClass="android.widget.SearchView"/>
    <item android:id="@+id/socioOrderNombre"
        
        android:title="@string/OrderByNombre"
        myapp:showAsAction="never"/>
    <item android:id="@+id/socioOrderApellidos"
        android:title="@string/OrderByApellidos"
        myapp:showAsAction="never"/>
    <item android:id="@+id/socioOrderDni"
        android:title="@string/OrderByDni"
        myapp:showAsAction="never"/>
    <item android:id="@+id/exportarSocios"
        android:title="@string/exportarCvs"
        myapp:showAsAction="never"/>
</menu>