<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.agentm.NewRegistroActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/crearRegistro_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/edTituloReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/azulClaro"
                android:hint="@string/titulo"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/edittext_cursor" />

            <EditText
                android:id="@+id/edDescReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/azulClaro"
                android:hint="@string/descrition"
                android:inputType="textMultiLine"
                android:textCursorDrawable="@drawable/edittext_cursor" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/edPrecioDes"
                    android:layout_width="79dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:backgroundTint="@color/azulClaro"
                    android:hint="@string/precio"
                    android:inputType="numberSigned|numberDecimal"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/edittext_cursor"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/edEuroDes" />

                <TextView
                    android:id="@+id/edEuroDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="€"
                    android:textSize="25dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rledFechaReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/fecha"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvFechaReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="20/05/2016"
                    android:textSize="20dp" />

                <ImageView
                    android:backgroundTint="@color/primary_material_light"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_add_circle"
                    android:buttonTint="@color/azulClaro" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlFotoReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/insertarFoto"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/edFotoReg"
                    android:backgroundTint="@color/primary_material_light"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_camera_enhance_white_48dp"
                    android:buttonTint="@color/azulClaro" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rlDelFotoReg"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/eliminarFoto"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/edDelFotoReg"
                    android:backgroundTint="@color/primary_material_light"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_delete_white_48dp"
                    android:buttonTint="@color/azulClaro" />

            </RelativeLayout>
            <ImageView
                android:id="@+id/edImgFotoReg"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="600dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
